--- a/config/portfolio-config.json
+++ b/config/portfolio-config.json
@@ -6,63 +6,63 @@
 			"title" 		: "App 1",
 			"category" 		: "Viviendas",
 			"data" 			: "viviendas",
-			"filter" 		: "filter-app"
+			"filter" 		: "filter-viviendas"
 		},
 		{
 			"img" 			: "app2.jpg",
 			"title" 		: "App 2",
 			"category" 		: "Viviendas",
 			"data" 			: "viviendas",
-			"filter" 		: "filter-app"
+			"filter" 		: "filter-viviendas"
 		},
 		{
 			"img" 			: "app3.jpg",
 			"title" 		: "App 3",
 			"category" 		: "Viviendas",
 			"data" 			: "viviendas",
-			"filter" 		: "filter-app"
+			"filter" 		: "filter-viviendas"
 		},
 		{
 			"img" 			: "web1.jpg",
 			"title" 		: "Web 1",
 			"category" 		: "Parques",
 			"data" 			: "parques",
-			"filter" 		: "filter-web"
+			"filter" 		: "filter-parques"
 		},
 		{
 			"img" 			: "web2.jpg",
 			"title" 		: "Web 2",
 			"category" 		: "Parques",
 			"data" 			: "parques",
-			"filter" 		: "filter-web"
+			"filter" 		: "filter-parques"
 		},
 		{
 			"img" 			: "web3.jpg",
 			"title" 		: "Web 3",
 			"category" 		: "Parques",
 			"data" 			: "parques",
-			"filter" 		: "filter-web"
+			"filter" 		: "filter-parques"
 		},
 		{
 			"img" 			: "card1.jpg",
 			"title" 		: "Card 1",
 			"category" 		: "Público",
 			"data" 			: "publico",
-			"filter" 		: "filter-card"
+			"filter" 		: "filter-publico"
 		},
 		{
 			"img" 			: "card2.jpg",
 			"title" 		: "Card 2",
 			"category" 		: "Público",
 			"data" 			: "publico",
-			"filter" 		: "filter-card"
+			"filter" 		: "filter-publico"
 		},
 		{
 			"img" 			: "card3.jpg",
 			"title" 		: "Card 3",
 			"category" 		: "Público",
 			"data" 			: "publico",
-			"filter" 		: "filter-card"
+			"filter" 		: "filter-publico"
 		}
 	]
 }
